--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,7 +6,7 @@
 
 .banner {
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     background-image: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)), url(https://cdn.shopify.com/s/files/1/2656/8500/products/ohpopsi-murals-standard-3-06m-x-2-48m-white-library-bookcase-wall-mural-3207426900011.jpg?v=1522256378);
     background-size: cover;
     background-position: center;
@@ -142,5 +142,11 @@ body {
     cursor: pointer;
 }
 .w3-quarter {
+    width: 25%;
+}
+
+.container {
     width: 100%;
+    display: flex;
+    flex-wrap: wrap;
 }
